--- a/src/DOMLintUI.css
+++ b/src/DOMLintUI.css
@@ -3,7 +3,6 @@
   position: fixed;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-  padding: 10px;
   font-family: sans-serif;
   font-size: 14px;
   background: #222;
@@ -21,10 +20,22 @@
   gap: 8px;
   cursor: grab;
   user-select: none;
+  padding: 8px;
 }
 
 .domlint-ui-toolbar:active {
   cursor: grabbing;
+}
+
+/* when dragging toolbar, append an invisble area to avoid losing target */
+.domlint-ui-toolbar:active::before {
+  content: ' ';
+  display: block;
+  position: absolute;
+  top: -100px;
+  bottom: -100px;
+  left: -100px;
+  right: -100px;
 }
 
 .domlint-ui-button {
@@ -67,9 +78,12 @@
 }
 
 .domlint-ui-report {
-  max-height: 300px;
+  height: 300px;
+  min-width: 100%;
+  min-height: 100px;
   overflow: auto;
-  margin-top: 10px;
+  padding: 8px;
+  resize: both;
 }
 
 .domlint-ui-element {
