--- a/src/DOMLintUI.css
+++ b/src/DOMLintUI.css
@@ -1,6 +1,9 @@
 .domlint-ui {
   all: initial;
   position: fixed;
+  left: calc(50% - 175px);
+  top: 8px;
+  min-width: 350px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   font-family: sans-serif;
@@ -32,10 +35,10 @@
   content: ' ';
   display: block;
   position: absolute;
-  top: -100px;
-  bottom: -100px;
-  left: -100px;
-  right: -100px;
+  top: -1000px;
+  bottom: -1000px;
+  left: -1000px;
+  right: -1000px;
 }
 
 .domlint-ui-button {
