--- a/src/DOMLintUI.css
+++ b/src/DOMLintUI.css
@@ -96,7 +96,7 @@
 }
 
 .domlint-ui-selector {
-  color: #08e;
+  color: #fff;
   text-decoration: none;
   display: inline-block;
   margin-bottom: 4px;
