--- a/src/DOMLintUI.css
+++ b/src/DOMLintUI.css
@@ -4,16 +4,16 @@
   left: calc(50% - 175px);
   top: 8px;
   min-width: 350px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
+  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.3);
   border-radius: 8px;
   font-family: sans-serif;
   font-size: 14px;
-  background: #222;
+  background: #000;
   color: #fff;
   z-index: 9999999;
 
-  --domlint-bad: #da0e0e;
-  --domlint-good: #008600;
+  --domlint-bad: #fc4a4a;
+  --domlint-good: #4bff4b;
   --domlint-okay: #eb7900;
 }
 
@@ -48,6 +48,7 @@
   background-color: #06f;
   color: #fff;
   cursor: pointer;
+  font-size: 14px;
 }
 
 .domlint-ui-button:hover {
